--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "test": "jest"
   },
   "devDependencies": {
-    "hardhat": "^2.9.3",
-    "jest": "^28.0.1",
+    "@types/jest": "^27.4.1",
+    "@types/lodash": "^4.14.182",
+    "jest": "^27.0.6",
+    "sinon": "^13.0.2",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
   },
@@ -19,7 +21,9 @@
   },
   "dependencies": {
     "@ethersproject/providers": "^5.6.4",
+    "@uniswap/router-sdk": "^1.0.5",
     "@uniswap/sdk-core": "^3.0.1",
-    "ethers": "^5.6.4"
+    "ethers": "^5.6.4",
+    "lodash": "^4.17.21"
   }
 }
